--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.3'
-	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
+	id 'org.springframework.boot' version '2.7.4'
+	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
 	id 'java'
 	id 'org.sonarqube' version '3.4.0.2513'
 }
@@ -28,10 +28,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'net.sf.jasperreports:jasperreports:6.20.0'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	implementation 'com.lowagie:itext:2.1.7' //Versiones superiores no funcionan
+	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
+	implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 	implementation 'org.springdoc:springdoc-openapi-security:1.6.11'
-	implementation 'com.lowagie:itext:4.2.2'
+	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.4'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:2.7.4'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
