--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#Configuracion de Postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/mediappbd
 spring.datasource.username=postgres
@@ -6,10 +7,20 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
-#jwt propiedades
-app.jwt-secret=JWTSecretKey
-app.jwt-expiration-milliseconds=600000
-
-#para Swagger
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher 
+#Definicion del puerto
 server.port = 8082
+
+#Definimos la prioridad en la seguridad
+security.oauth2.resource.filter-order=3
+
+#https://www.allkeysgenerator.com/Random/Security-Encryption-Key-Generator.aspx
+security.signing-key=MaYzkSjmkzPC57L
+security.encoding-strength=256
+security.security-realm=Spring Boot JWT
+
+security.jwt.client-id=mitomediapp
+security.jwt.client-secret=mito89codex
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=mitoresourceid
