--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.database=postgresql
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
-#Definicion del puerto
-server.port = 8080
+#Eliminacion de Warnings
+spring.jpa.open-in-view=false
 
 #Definimos la prioridad en la seguridad
 security.oauth2.resource.filter-order=3
@@ -24,3 +24,4 @@ security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=mitoresourceid
+
