--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 #Eliminacion de Warnings
-spring.jpa.open-in-view=false
+#spring.jpa.open-in-view=false //No funciona en consultar cuando se trabaja el model y no dto
 
 #Definimos la prioridad en la seguridad
 security.oauth2.resource.filter-order=3
