--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.10'
+	id 'org.springframework.boot' version '2.7.11'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
-	id 'org.sonarqube' version '3.5.0.2730'
+	id "org.sonarqube" version "4.0.0.2929"
+
 }
 
 group = 'com.mitocode'
@@ -28,8 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-	implementation 'net.sf.jasperreports:jasperreports:6.20.0'
-	implementation 'com.lowagie:itext:2.1.7' //Versiones superiores no funcionan
+	implementation 'net.sf.jasperreports:jasperreports:6.20.4'
+	implementation 'com.github.librepdf:openpdf:1.3.30'	//Versiones superiores no funcionan
 	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
 	implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
