--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.12'
+	id 'org.springframework.boot' version '2.7.15'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
-	id "org.sonarqube" version "4.0.0.2929"
+	id "org.sonarqube" version "4.3.0.3225"
 
 }
 
 group = 'com.mitocode'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+	sourceCompatibility = '17'
+}
 
 configurations {
 	compileOnly {
@@ -30,7 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 	implementation 'net.sf.jasperreports:jasperreports:6.20.5'
-	implementation 'com.github.librepdf:openpdf:1.3.30'	//Versiones superiores no funcionan
+	implementation 'com.github.librepdf:openpdf:1.3.30'
 	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
 	implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
